Bump testContainersVersion from 1.19.8 to 2.0.4